# dada

./: .dir-locals.el  .gitattributes  .gitignore  .vale.ini  Makefile  README.md  algebra  cabal.project  colambek  flake.nix  functor  garnix.yaml  id  lambek  lowerDay  recursive  tupleBoth
.config/: mustache.yaml
.config/emacs/: .dir-locals.el
.config/git/: config
.config/project/: default.nix  github-ci.nix  github-pages.nix
.github/: settings.yml
.github/workflows/: build.yml  flakehub-publish.yml  pages.yml
Bool/: eq
Const/: Type  functor  recursive  steppable
Coproduct/: Type
Coproduct/inject/: left  right
Corecursive/: Type
DistributiveLaw/: either  tuple  type
EnvT/: functor  type
Free/: Type  applicative  foldFree  foldable  fromMu  functor  hoist  iter  iterA  liftF  monad  package.dhall  recursive  retract  steppable  toMu  transformer  traversable  wrap
FreeF/: Type  bifunctor  foldable  functor  traversable
Identity/: functor
Inject/: Type  self
Leibniz/: Type  refl
List/: at  functor  recursive  steppable  tail  zip
Mu/: Type  functor  recursive  steppable  type
Natural/: compare  le  lt  recursive  steppable  sub
Nu/: Type  corecursive  functor  steppable
Optional/: eq  functor
Recursive/: Type  cataM  gcata  gcataM  impliedEq
Steppable/: Type
Void/: Type  absurd  type
XNor/: eq  functor  terms.dhall  type
data/Cofree/: Type
data/Colist/: Type
data/List/: Type
data/Natural/: Type
data/Partial/: runFor  type
data/Stream/: Type
data/Void/: absurd  type
dhall/: apply  colambek  lambek  package.dhall
dhall/Bool/: eq
dhall/Const/: functor  package.dhall  recursive  steppable
dhall/Corecursive/: Type
dhall/EnvT/: functor  package.dhall
dhall/List/: at  package.dhall  recursive  steppable
dhall/Mu/: functor  package.dhall  recursive  steppable
dhall/Natural/: lt  package.dhall  recursive  steppable  sub
dhall/Nu/: Type  corecursive  functor  package.dhall  (+1 more)
docs/: index.html
haskell/: dada.cabal
haskell/src/: Dada.hs
haskell/tests/: doctests.hs
scripts/: compile.sh  doc.sh  find-dhall-files.sh  freeze.sh
zoo/: cata2  para  zygo
(+14 files in other folders)
